docs: add team docs add
